Definie Cluster Resource and move effective configuration to DomainPresenceInfo